# simple_spreadsheet

./: CMakeLists.txt  Cell.cpp  Cell.h  Date.cpp  Date.h  DateCell.cpp  DateCell.h  Doxyfile  FunctionCell.cpp  FunctionCell.h  Makefile  NumberCell.cpp  NumberCell.h  README.md  Sheet.cpp  Sheet.h  TextCell.cpp  TextCell.h  main.cpp  prohlaseni.txt  randomsheet1.csv  vumilan  zadani.txt
.github/workflows/: ccpp.yml
examples/: example1  example2  newsheet.csv  random2.csv  sheet4.csv
savedFiles/: sheet2.csv
src/: Cell.cpp  Cell.h  Date.cpp  Date.h  DateCell.cpp  DateCell.h  Exp.cpp  Exp.h  ExpFunction.cpp  ExpFunction.h  ExpNode.cpp  ExpNode.h  ExpTerm.cpp  ExpTerm.h  FormulaCell.cpp  FormulaCell.h  FunctionCell.cpp  FunctionCell.h  NumberCell.cpp  NumberCell.h  Sheet.cpp  Sheet.h  TextCell.cpp  TextCell.h  cell.cpp  cell.h  expFunction.cpp  expFunction.h  expNode.cpp  expNode.h  expTerm.cpp  formulaCell.cpp  formulaCell.h  main.cpp  sheet.cpp  sheet.h  sheetController.cpp  sheetController.h  sheetView.cpp  sheetView.h  (+1 more)
src/exceptions/: CycleException.h  DivisionByZeroException.h  ErrorCellLinkException.h  NotANumberException.h  cycleException.h  divisionByZeroException.h  errorCellLinkException.h  notANumberException.h
vumilan/: main
